--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.javahome</groupId>
 	<artifactId>myweb</artifactId>
-	<packaging>war</packaging>
+	<packaging>war-SNAPSHOT</packaging>
 	<version>8.2.1</version>
 	<name>Java Home myweb</name>
 	<url>http://maven.apache.org</url>
